--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
-    "vss-web-extension-sdk": "^5.134.0"
+    "vss-web-extension-sdk": "^5.134.0",
+    "vsts-task-lib": "^2.6.0"
   }
 }
